relatorio ate- Verificações da solução encontrada-exclusive

--- a/relatorio/relatorio_intermedio.tex
+++ b/relatorio/relatorio_intermedio.tex
@@ -135,12 +135,14 @@ Como tal, a base de dados irá ter três tabelas, tal como se pode verificar no 
 
 \begin{figure}[H]
   \centering
-  \includegraphics[scale=0.40]{DB-script.png}
+  \includegraphics[scale=0.50]{DB-script.png}
   \caption{Script utilizado para a criação da base de dados}
   \label{fig:db-script}
 \end{figure}
 
-Para a implementação do sensor de temperatura, recorrer-se-á às bibliotecas associadas ao dispositivo \textit{Akeru 3.3} disponibilizadas pelo \textit{Snootlab}.
+Relativamente ao alojamento da base de dados e do servidor \textit{web}, recorreu-se ao servidor do IST \textit{sigma.tecnico.ulisboa.pt}.
+
+Para a implementação do sensor de temperatura, recorreu-se às bibliotecas associadas ao dispositivo \textit{Akeru 3.3} disponibilizadas pelo \textit{Snootlab}.
 
 \section{Verificações da solução encontrada}
 
