find if there are messages for device

--- a/app/SigFox/app/src/main/res/values/strings.xml
+++ b/app/SigFox/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SigFox</string>
+    <string name="app_name">ThermoFox</string>
     <string name="title_activity_logs">LogsActivity</string>
 </resources>
