--- a/relatorio/relatorio_intermedio.tex
+++ b/relatorio/relatorio_intermedio.tex
@@ -262,6 +262,15 @@ Ao realizar as acções anteriores, a base de dados irá ser atualizada em confo
 \includegraphics[width=\linewidth]{newtime.png}
   \caption{Alteração do valor de \textit{lastMessageTime}}\label{fig:newtime}
 \end{figure}
+
+\item Quando é adicionado um novo dispositivo, este será adicionado à base de dados, tal como esperado.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=\linewidth]{newdevvv.png}
+  \caption{Adição de um novo dispositivo}\label{fig:newdevvv}
+\end{figure}
+
 \end{itemize}
 
 %inserir os prints
