relatorio db done

--- a/relatorio/relatorio_intermedio.tex
+++ b/relatorio/relatorio_intermedio.tex
@@ -267,7 +267,7 @@ Ao realizar as acções anteriores, a base de dados irá ser atualizada em confo
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\linewidth]{newdevvv.png}
+\includegraphics[scale=0.4]{newdevvv.png}
   \caption{Adição de um novo dispositivo}\label{fig:newdevvv}
 \end{figure}
 
